wordpress-tijdelijk/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: tijdelijk5
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: letsencrypt-prod # Ensure this matches your Cert-Manager ClusterIssuer
spec:
  tls:
   - hosts:
        - tijdelijk5.hlads.net
     secretName: wordpress-test1-tls # This will be created automatically by Cert-Manager
  rules:
    - host: tijdelijk5.hlads.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
